--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     
     <header class="logo-header">
-      <img src="images/logo.jpeg" alt="Scrum And Get It Logo" class="podcast-logo">
+      <img src="logo.jpeg" alt="Scrum And Get It Logo" class="podcast-logo">
     </header>
 
     <p class="description">
@@ -22,25 +22,25 @@
       <ul class="link-list">
         <li>
           <a href="https://open.spotify.com/show/1XZyTpxmRjpFy2nZ6J0fIh?si=f1a386dffd924c76" target="_blank" rel="noopener">
-            <img src="images/spotify.png" alt="Spotify Logo">
+            <img src="spotify.png" alt="Spotify Logo">
           </a>
         </li>
 
         <li>
           <a href="https://podcasts.apple.com/gb/podcast/scrum-and-get-it/id1853495624" target="_blank" rel="noopener">
-            <img src="images/apple.png" alt="Apple Podcasts Logo">
+            <img src="apple.png" alt="Apple Podcasts Logo">
           </a>
         </li>
 
         <li>
           <a href="https://www.tiktok.com/@scrumandgetit?_r=1&_t=ZN-91acK4yzEtq" target="_blank" rel="noopener">
-            <img src="images/tiktok.png" alt="TikTok Logo">
+            <img src="tiktok.png" alt="TikTok Logo">
           </a>
         </li>
 
         <li>
           <a href="https://www.instagram.com/scrumandget.it?igsh=MWE0MGdoYWZsejh1dg%3D%3D&utm_source=qr" target="_blank" rel="noopener">
-            <img src="images/instagram.png" alt="Instagram Logo">
+            <img src="instagram.png" alt="Instagram Logo">
           </a>
         </li>
 
